--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Härnösands HF – Alla Händelser</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Härnösands HF – Händelser</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>Härnösands HF – Alla Händelser</h1>
+  <h1>Härnösands HF – Händelser</h1>
   <div id="event-container"></div>
   <script src="data.js"></script>
 </body>
