--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Händelser</title>
+  <title>Alla Händelser – Härnösands HF</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <a href="ledig.html">Ledigt</a>
   </nav>
   <div id="event-container"></div>
-  <button class="toggle-button" onclick="togglePastEvents()">Visa tidigare händelser</button>
+  <button class="toggle-button" onclick="togglePast()">Visa tidigare händelser</button>
   <script src="data.js"></script>
 </body>
 </html>
