--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Härnösands HF – Händelser</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Härnösands HF – Alla Händelser</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>Härnösands HF – Händelser</h1>
+  <h1>Härnösands HF – Alla Händelser</h1>
   <nav>
-    <a href="index.html">Alla</a> |
-    <a href="usm.html">USM</a> |
-    <a href="cup.html">Cuper</a> |
-    <a href="ledig.html">Ledigt</a>
-  </nav>
-  <div id="event-container"></div>
-  <button class="toggle-button" onclick="togglePast()">Visa tidigare händelser</button>
+  <a href="index.html">Alla</a>
+  <a href="usm.html">USM</a>
+  <a href="cup.html">Cuper</a>
+  <a href="ledig.html">Ledigt</a>
+</nav>
+<div id="event-container"></div>
+<button class="toggle-button" onclick="togglePast()">Visa tidigare händelser</button>
   <script src="data.js"></script>
 </body>
 </html>
