--- a/usm.html
+++ b/usm.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>Härnösands HF – Alla Händelser</h1>
+  <h1>Härnösands HF F11 – USMr</h1>
   <nav>
   <a href="index.html">Alla</a>
   <a href="usm.html">USM</a>
