--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <div id="event-container"></div>
+  <h1>Härnösands HF – Alla Händelser</h1>
+  <nav>
+  <a href="index.html">Alla</a>
+  <a href="usm.html">USM</a>
+  <a href="cup.html">Cuper</a>
+  <a href="ledig.html">Ledigt</a>
+</nav>
+<div id="event-container"></div>
   <script src="data.js"></script>
 </body>
 </html>
