--- a/index.html
+++ b/index.html
@@ -4,18 +4,98 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Härnösands HF F11 – Alla Händelser</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <style>
+    /* Responsiv navigering */
+    .main-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 1rem 0;
+      position: relative;
+    }
+
+    .menu-toggle {
+      font-size: 1.5rem;
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: none;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      padding-left: 0;
+      margin: 0;
+    }
+
+    .nav-links li a {
+      text-decoration: none;
+      color: #007acc;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: background-color 0.2s ease;
+    }
+
+    .nav-links li a:hover {
+      background-color: #007acc;
+      color: white;
+    }
+
+    @media (max-width: 600px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: #f0f0f0;
+        position: absolute;
+        top: 50px;
+        right: 0;
+        border: 1px solid #ccc;
+        padding: 0.5rem;
+        z-index: 10;
+      }
+
+      .nav-links.open {
+        display: flex;
+      }
+
+      .nav-links li {
+        margin: 0.25rem 0;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Härnösands HF F11 – Alla Händelser</h1>
-  <nav>
-  <a href="index.html">Alla</a>
-  <a href="usm.html">USM</a>
-  <a href="cup.html">Cuper</a>
-  <a href="ledig.html">Ledigt</a>
-</nav>
-<div id="event-container"></div>
+  <nav class="main-nav">
+    <button class="menu-toggle" aria-label="Meny">☰</button>
+    <ul class="nav-links">
+      <li><a href="index.html">Alla</a></li>
+      <li><a href="usm.html">USM</a></li>
+      <li><a href="cup.html">Cuper</a></li>
+      <li><a href="ledig.html">Ledigt</a></li>
+    </ul>
+  </nav>
+
+  <div id="event-container"></div>
+
   <script src="data.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const toggleBtn = document.querySelector(".menu-toggle");
+      const navLinks = document.querySelector(".nav-links");
+
+      toggleBtn.addEventListener("click", () => {
+        navLinks.classList.toggle("open");
+      });
+    });
+  </script>
 </body>
 </html>
