--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Härnösands HF F11 – Alla Händelser</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
-    /* Responsiv navigering */
+    body {
+      font-family: sans-serif;
+      margin: 0 auto;
+      max-width: 800px;
+      padding: 1rem;
+      background-color: #f9f9f9;
+    }
+
+    /* Navigering */
     .main-nav {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 1rem 0;
+      justify-content: flex-end;
+      position: relative;
+      margin-bottom: 1rem;
+    }
+
+    .nav-wrapper {
       position: relative;
     }
 
     .menu-toggle {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       background: none;
       border: none;
       cursor: pointer;
@@ -54,13 +65,15 @@
       .nav-links {
         display: none;
         flex-direction: column;
-        background-color: #f0f0f0;
+        background-color: rgba(255, 255, 255, 0.97);
         position: absolute;
-        top: 50px;
+        top: 40px;
         right: 0;
         border: 1px solid #ccc;
-        padding: 0.5rem;
-        z-index: 10;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        border-radius: 8px;
+        min-width: 140px;
+        z-index: 100;
       }
 
       .nav-links.open {
@@ -68,20 +81,28 @@
       }
 
       .nav-links li {
-        margin: 0.25rem 0;
+        margin: 0.4rem 0;
+      }
+
+      .nav-links li a {
+        padding: 0.6rem 1rem;
+        display: block;
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
   <nav class="main-nav">
-    <button class="menu-toggle" aria-label="Meny">☰</button>
-    <ul class="nav-links">
-      <li><a href="index.html">Alla</a></li>
-      <li><a href="usm.html">USM</a></li>
-      <li><a href="cup.html">Cuper</a></li>
-      <li><a href="ledig.html">Ledigt</a></li>
-    </ul>
+    <div class="nav-wrapper">
+      <button class="menu-toggle" aria-label="Meny">☰</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Alla</a></li>
+        <li><a href="usm.html">USM</a></li>
+        <li><a href="cup.html">Cuper</a></li>
+        <li><a href="ledig.html">Ledigt</a></li>
+      </ul>
+    </div>
   </nav>
 
   <div id="event-container"></div>
@@ -94,6 +115,13 @@
 
       toggleBtn.addEventListener("click", () => {
         navLinks.classList.toggle("open");
+      });
+
+      // Auto-close menu on mobile when clicking a link
+      document.querySelectorAll(".nav-links a").forEach(link => {
+        link.addEventListener("click", () => {
+          navLinks.classList.remove("open");
+        });
       });
     });
   </script>
