--- a/usm.html
+++ b/usm.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Härnösands HF F11 – USM</title>
+  <title>Härnösands HF – USM</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>Härnösands HF F11 – USM</h1>
-  <nav>
-  <a href="index.html">Alla</a>
-  <a href="usm.html">USM</a>
-  <a href="cup.html">Cuper</a>
-  <a href="ledig.html">Ledigt</a>
-</nav>
-<div id="event-container"></div>
+  <div id="event-container"></div>
   <script src="data.js"></script>
 </body>
 </html>
