--- a/usm.html
+++ b/usm.html
@@ -4,11 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Härnösands HF – USM</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
+  <nav class="main-nav">
+    <div class="nav-wrapper">
+      <button class="menu-toggle" aria-label="Meny">☰</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Alla</a></li>
+        <li><a href="usm.html">USM</a></li>
+        <li><a href="cup.html">Cuper</a></li>
+        <li><a href="ledig.html">Ledigt</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <div id="event-container"></div>
+
   <script src="data.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const toggleBtn = document.querySelector(".menu-toggle");
+      const navLinks = document.querySelector(".nav-links");
+
+      toggleBtn.addEventListener("click", () => {
+        navLinks.classList.toggle("open");
+      });
+
+      document.querySelectorAll(".nav-links a").forEach(link => {
+        link.addEventListener("click", () => {
+          navLinks.classList.remove("open");
+        });
+      });
+    });
+  </script>
 </body>
 </html>
