--- a/index.html
+++ b/index.html
@@ -3,94 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alla Händelser</title>
+  <title>Alla händelser</title> <!-- Byt för andra sidor -->
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0 auto;
-      max-width: 800px;
-      padding: 1rem;
-      background-color: #f9f9f9;
-    }
-
-    /* Navigering */
-    .main-nav {
-      display: flex;
-      justify-content: flex-end;
-      position: relative;
-      margin-bottom: 1rem;
-    }
-
-    .nav-wrapper {
-      position: relative;
-    }
-
-    .menu-toggle {
-      font-size: 1.6rem;
-      background: none;
-      border: none;
-      cursor: pointer;
-      display: none;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 1rem;
-      padding-left: 0;
-      margin: 0;
-    }
-
-    .nav-links li a {
-      text-decoration: none;
-      color: #007acc;
-      font-weight: bold;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      transition: background-color 0.2s ease;
-    }
-
-    .nav-links li a:hover {
-      background-color: #007acc;
-      color: white;
-    }
-
-    @media (max-width: 600px) {
-      .menu-toggle {
-        display: block;
-      }
-
-      .nav-links {
-        display: none;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.97);
-        position: absolute;
-        top: 40px;
-        right: 0;
-        border: 1px solid #ccc;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        border-radius: 8px;
-        min-width: 140px;
-        z-index: 100;
-      }
-
-      .nav-links.open {
-        display: flex;
-      }
-
-      .nav-links li {
-        margin: 0.4rem 0;
-      }
-
-      .nav-links li a {
-        padding: 0.6rem 1rem;
-        display: block;
-        font-size: 1rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <nav class="main-nav">
@@ -105,11 +20,19 @@
     </div>
   </nav>
 
+  <!-- Dynamisk rubrik från <title> -->
+  <h1 id="page-title"></h1>
+
+  <!-- Här visas alla eventkort -->
   <div id="event-container"></div>
 
   <script src="data.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
+      // Sätt rubrik från <title>
+      document.getElementById("page-title").textContent = document.title;
+
+      // Hamburgermeny-toggle
       const toggleBtn = document.querySelector(".menu-toggle");
       const navLinks = document.querySelector(".nav-links");
 
@@ -117,7 +40,6 @@
         navLinks.classList.toggle("open");
       });
 
-      // Auto-close menu on mobile when clicking a link
       document.querySelectorAll(".nav-links a").forEach(link => {
         link.addEventListener("click", () => {
           navLinks.classList.remove("open");
