--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="usm.html">USM</a></li>
         <li><a href="cup.html">Cuper</a></li>
         <li><a href="ledig.html">Ledigt</a></li>
+        <li><a href="budget.html">Budget</a></li>
       </ul>
     </div>
   </nav>
