--- a/budget.html
+++ b/budget.html
@@ -21,7 +21,7 @@
     </div>
   </nav>
 
-  <h1>Budgetsammanställning</h1>
+  <h1>Budget</h1>
   <div id="budget-container"></div>
 
   <script src="budget.js"></script>
