--- a/budget.html
+++ b/budget.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Budget – Härnösands HF F11</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles_budget.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
