Ändringar på hamburgaren

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
   <nav class="main-nav">
     <div class="nav-wrapper">
-      <button class="menu-toggle" aria-label="Meny">☰</button>
+      <button class="menu-toggle" aria-label="Meny">
+        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+          <rect width="100" height="10" rx="5"></rect>
+          <rect y="30" width="100" height="10" rx="5"></rect>
+          <rect y="60" width="100" height="10" rx="5"></rect>
+        </svg>
+      </button>
       <ul class="nav-links">
         <li><a href="index.html">Alla</a></li>
         <li><a href="usm.html">USM</a></li>
