--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alla händelser</title> <!-- Byt för andra sidor -->
+  <title>Händelser</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
@@ -18,28 +18,22 @@
         </svg>
       </button>
       <ul class="nav-links">
-        <li><a href="index.html">Alla</a></li>
+        <li><a href="index.html" class="active">Händelser</a></li>
         <li><a href="usm.html">USM</a></li>
         <li><a href="cup.html">Cuper</a></li>
-        <li><a href="ledig.html">Ledigt</a></li>
+        <li><a href="ledig.html">Ledighetsansökningar</a></li>
         <li><a href="budget.html">Budget</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Dynamisk rubrik från <title> -->
-  <h1 id="page-title"></h1>
+  <h1 id="page-title">Händelser</h1>
 
-  <!-- Här visas alla eventkort -->
   <div id="event-container"></div>
 
   <script src="data.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Sätt rubrik från <title>
-      document.getElementById("page-title").textContent = document.title;
-
-      // Hamburgermeny-toggle
       const toggleBtn = document.querySelector(".menu-toggle");
       const navLinks = document.querySelector(".nav-links");
 
