--- a/ledig.html
+++ b/ledig.html
@@ -3,36 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ledighetsansökningar</title> <!-- Byt för andra sidor -->
+  <title>Ledighetsansökningar</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
   <nav class="main-nav">
     <div class="nav-wrapper">
-      <button class="menu-toggle" aria-label="Meny">☰</button>
+      <button class="menu-toggle" aria-label="Meny">
+        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+          <rect width="100" height="10" rx="5"></rect>
+          <rect y="30" width="100" height="10" rx="5"></rect>
+          <rect y="60" width="100" height="10" rx="5"></rect>
+        </svg>
+      </button>
       <ul class="nav-links">
-        <li><a href="index.html">Alla</a></li>
+        <li><a href="index.html">Händelser</a></li>
         <li><a href="usm.html">USM</a></li>
         <li><a href="cup.html">Cuper</a></li>
-        <li><a href="ledig.html">Ledigt</a></li>
+        <li><a href="ledig.html" class="active">Ledighetsansökningar</a></li>
+        <li><a href="budget.html">Budget</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Dynamisk rubrik från <title> -->
-  <h1 id="page-title"></h1>
+  <h1 id="page-title">Ledighetsansökningar</h1>
 
-  <!-- Här visas alla eventkort -->
   <div id="event-container"></div>
 
   <script src="data.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Sätt rubrik från <title>
       document.getElementById("page-title").textContent = document.title;
 
-      // Hamburgermeny-toggle
       const toggleBtn = document.querySelector(".menu-toggle");
       const navLinks = document.querySelector(".nav-links");
 
