--- a/budget.html
+++ b/budget.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Budget – Härnösands HF F11</title>
+  <title>Budget</title>
   <link rel="stylesheet" href="Styles_budget.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
