--- a/ledig.html
+++ b/ledig.html
@@ -26,6 +26,11 @@
   </nav>
 
   <h1 id="page-title">Ledighetsansökningar</h1>
+  <div class="page-description">
+    🔔 <strong>Ledighetsansökningar</strong><br />
+    Den här sidan visar kommande händelser där spelare kan behöva vara lediga från skolan.<br />
+    Använd informationen för att i god tid planera och skicka in eventuella ledighetsansökningar.
+  </div>
 
   <div id="event-container"></div>
 
