--- a/ledig.html
+++ b/ledig.html
@@ -28,8 +28,8 @@
   <h1 id="page-title">Ledighetsansökningar</h1>
   <div class="page-description">
     🔔 <strong>Ledighetsansökningar</strong><br />
-    Den här sidan visar kommande händelser där spelare kan behöva vara lediga från skolan.<br />
-    Använd informationen för att i god tid planera och skicka in eventuella ledighetsansökningar.
+    Den här sidan visar kommande händelser där spelare kan behöva vara lediga från skolan.<br /><br />
+    Använd informationen för att i god tid planera och skicka in eventuella ledighetsansökningar.<br />
   </div>
 
   <div id="event-container"></div>
