--- a/ledig.html
+++ b/ledig.html
@@ -29,7 +29,7 @@
   <div class="page-description">
     🔔 <strong>Ledighetsansökningar</strong><br />
     Den här sidan visar kommande händelser där spelare kan behöva vara lediga från skolan.<br /><br />
-    Använd informationen för att i god tid planera och skicka in eventuella ledighetsansökningar.<br />
+    Använd informationen för att i god tid planera och skicka in eventuella ledighetsansökningar.<br /><br />
   </div>
 
   <div id="event-container"></div>
