--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       </ul>
     </div>
   </nav>
+  
+  <div class="header-logo-container">
+    <img src="Logotyp1.png" alt="Föreningens logotyp" class="header-logo" />
+  </div>
 
   <h1 id="page-title">Händelser</h1>
 
