--- a/ledig.html
+++ b/ledig.html
@@ -25,6 +25,10 @@
     </div>
   </nav>
 
+  <div class="header-logo-container">
+    <img src="Logotyp1.png" alt="Föreningens logotyp" class="header-logo" />
+  </div>
+
   <h1 id="page-title">Ledighetsansökningar</h1>
   <div class="page-description">
     🔔 <strong>Ledighetsansökningar</strong><br />
