--- a/budget.html
+++ b/budget.html
@@ -26,7 +26,7 @@
   </nav>
 
   <div class="header-logo-container">
-    <img src="Logotyp1.png" alt="Föreningens logotyp" class="header-logo" />
+    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="header-logo" />
   </div>
 
   <h1 id="page-title">Budget</h1>
