--- a/ledig.html
+++ b/ledig.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <nav class="main-nav">
+    <img src="Logotyp1.png" alt="Föreningens logotyp" class="nav-logo" />
     <div class="nav-wrapper">
       <button class="menu-toggle" aria-label="Meny">
         <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
@@ -24,10 +25,6 @@
       </ul>
     </div>
   </nav>
-
-  <div class="header-logo-container">
-    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="header-logo" />
-  </div>
 
   <h1 id="page-title">Ledighetsansökningar</h1>
   <div class="page-description">
