--- a/budget.html
+++ b/budget.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="main-nav">
-    <img src="Logotyp1.png" alt="Föreningens logotyp" class="nav-logo" />
+    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
     <div class="nav-wrapper">
       <button class="menu-toggle" aria-label="Meny">
         <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
