--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
       });
     });
   </script>
+  <footer class="site-footer">
+    <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
+    <span class="footer-text">Developed by Beaver Consulting</span>
+  </footer>
 </body>
 </html>
