--- a/ganttschema.html
+++ b/ganttschema.html
@@ -74,7 +74,7 @@
 
     function extractDateOnly(str) {
       if (!str) return null;
-      const match = str.trim().match(/^\d{4}-\d{2}-\d{2}/);
+      const match = str.trim().match(/\d{4}-\d{2}-\d{2}/);
       return match ? match[0] : null;
     }
 
