--- a/ganttschema.html
+++ b/ganttschema.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ganttschema Säsong</title>
-  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.3/dist/frappe-gantt.css">
+  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css">
   <style>
     body {
       font-family: sans-serif;
@@ -63,7 +63,7 @@
   <div id="gantt"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="https://unpkg.com/frappe-gantt@0.6.3/dist/frappe-gantt.min.js"></script>
+  <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQwy0b0RMcUXo3xguOtukMryHNlYnebQdskaIWHXr3POx7fg9NfUHsMTGjOlDnkOJZybrWZ7r36NfB1/pub?output=csv';
@@ -113,8 +113,8 @@
                 const task = {
                   id: `event-${i}`,
                   name: e['Namn på händelse'] || 'Händelse',
-                  start: startDate.toISOString().split('T')[0],
-                  end: endDate.toISOString().split('T')[0],
+                  start: startDate,
+                  end: endDate,
                   progress: 100,
                   custom_class: 'event-type-' + (e['Typ av händelse'] || '').toLowerCase().replace(/\s/g, '-')
                 };
