--- a/ganttschema.html
+++ b/ganttschema.html
@@ -22,7 +22,7 @@
   <div id="chart_div"></div>
 
   <script>
-    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/1JEO_AArVxbSDKoNmSp40J5Jco_QDDO-OMrUgcn0Pb3Q/gviz/tq?tqx=out:csv&sheet=Händelser';
+    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQwy0b0RMcUXo3xguOtukMryHNlYnebQdskaIWHXr3POx7fg9NfUHsMTGjOlDnkOJZybrWZ7r36NfB1/pub?output=csv';
 
     google.charts.load('current', {'packages':['gantt']});
     google.charts.setOnLoadCallback(loadAndDraw);
